deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omnifood-deployment
  namespace: omnifood
spec:
  replicas: 2
  selector:
    matchLabels:
      app: omnifood
  template:
    metadata:
      labels:
        app: omnifood
    spec:
      containers:
        - name: omnifood
          image: atultele/omnifood:latest
          ports:
            - containerPort: 80
