service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omnifood-service
  namespace: omnifood
spec:
  selector:
    app: omnifood
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
