ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omnifood-ingress
  namespace: omnifood
spec:
  ingressClassName: nginx
  rules:
  - host: omnifood.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: omnifood-service
            port:
              number: 80
